# OIDN-python

./: .gitmodules  .pre-commit-config.yaml  AGENTS.md  APIs.md  IMPLEMENTATION_PLAN.md  README.md  build_support.py  generate_doc.py  pyproject.toml
.github/workflows/: build-wheels.yml  ci.yml
scripts/: build_oidn.py  stage_oidn_libs.py
src/: build_support.py
src/oidn/: __init__.py  __main__.py  _backends.py  _ffi.py  capi.py  constants.py
src/oidn/lib.macos.aarch64/: libOpenImageDenoise.2.dylib  libOpenImageDenoise_device_cpu.2.1.0.dylib  libOpenImageDenoise_device_cpu.2.4.1.dylib  libOpenImageDenoise_device_metal.2.4.1.dylib  libtbb.12.dylib
tests/DenoiseCornellBox/: DenoiseCornellBox.py  DenoiseCornellBox2.py
tests/integration/: test_denoise_cpu.py
tests/unit/: test_backends.py  test_buffers.py  test_denoise.py  test_device.py  test_ffi.py  test_filter.py
