[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oidn"
version = "0.4"
description = "A simple python binding for Intel OIDN"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "HfCloud", email = "sxysxygm@gmail.com" },
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy>=1.12.0",
  "pillow",
  "torch",
]

[project.urls]
Homepage = "https://github.com/sxysxy/OIDN-python"
Repository = "https://github.com/sxysxy/OIDN-python"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oidn = ["lib.*/*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.9"
files = ["src", "tests"]
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]

[tool.coverage.run]
branch = false
source = ["oidn"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true

[dependency-groups]
dev = [
  "mypy>=1.8",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.3",
  "types-Pillow",
]
