[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oidn"
version = "0.4"
description = "A simple python binding for Intel OIDN"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "HfCloud", email = "sxysxygm@gmail.com" },
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy>=1.12.0",
  "pillow",
]

[project.optional-dependencies]
cuda = ["torch"]
hip = ["torch"]
sycl = ["dpctl"]

[project.urls]
Homepage = "https://github.com/sxysxy/OIDN-python"
Repository = "https://github.com/sxysxy/OIDN-python"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
py-modules = ["build_support"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oidn = ["lib.*/*", "py.typed"]

[tool.setuptools.cmdclass]
bdist_wheel = "build_support.BDistWheel"

[tool.ruff]
target-version = "py310"
fix = true
line-length = 120
extend-exclude = ["oidn_cpp"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "SIM", "S", "C4", "LOG", "PTH", "NPY", "RUF"]
ignore = ["S101", "S311", "S603", "S607"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"generate_doc.py" = ["E402"]
"src/oidn/__init__.py" = ["F403", "F405"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["pytest", "_pytest", "_pytest.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["torch", "torch.*", "dpctl", "dpctl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["wheel", "wheel.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]

[tool.coverage.run]
branch = false
source = ["oidn"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true

[dependency-groups]
dev = [
  "build>=1.0",
  "mypy>=1.8",
  "pre-commit>=3.6",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.3",
  "wheel>=0.41",
  "types-Pillow",
]
